@@ -11,6 +11,7 @@ enemyracemanager-max-attack-range=Max Attack Range [img=info]
 enemyracemanager-enemy-corpse-time=Enemy Corpse Decompose Time (minute) [img=info]
 enemyracemanager-level-multipliers=Enemy Strength Multiplier [img=info]
 enemyracemanager-max-hitpoint-multipliers=Enemy Max Hit Points Multiplier [img=info]
+enemyracemanager-damage-multipliers=Enemy Damage Multiplier [img=info]
 enemyracemanager-max-gathering-groups=Max Auto Gathering Groups [img=info]
 enemyracemanager-max-group-size=Max Group Size [img=info]
 
@@ -49,8 +50,10 @@ enemyracemanager-enable-bitters=Enable vanilla biters. Vanilla bitter will mix w
 enemyracemanager-max-level=Enemies will evolve as you advance. \n[font=default-bold]Normal[/font] max at level 10, target with weapon level 12 (enemy damage resist: 70-85%). \n[font=default-bold]Advanced[/font] max at level 15, target weapon level 18 (enemy damage resist: 85-95%). \n[font=default-bold]Hardcore[/font] max at level 20, tested with player weapon level 25. (enemy damage resist: 85-95%, higher HP and damage)
 enemyracemanager-max-attack-range=Max Attack Range for extra long range attack units. \n"Advanced - 20" is outside of gun attack range(18).
 enemyracemanager-enemy-corpse-time=The time that the enemy's corpses stay. This only affects new races.
-enemyracemanager-level-multipliers=How strong enemy get for each level. (level * level_multiplier / 100).  This affects HP, resistance, damage and healing. Range: 3 - 20
-enemyracemanager-max-hitpoint-multipliers=Enemy hitpoints multiplier (base * max_hitpoint_multiplier * unit_multiplier).
+enemyracemanager-level-multipliers=How strong enemy get for each level. This affects HP, resistance, damage and healing. Range: 3 - 20
+enemyracemanager-max-hitpoint-multipliers=Enemy hitpoints multiplier. Range: 5 - 100
+enemyracemanager-damage-multipliers=Enemy Damage Multiplier. Range: 1 - 10
+
 enemyracemanager-max-gathering-groups=Map setting: Max Gathering Group.  Base game defaults 30. Higher value may have performance implication.  Range: 5 - 60
 enemyracemanager-max-group-size=Map setting: Max Group Size.  Base game defaults 200. Higher value may have performance implication. Range: 50 - 600
 
